[package]
name = "fuel-core-nats"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Fuel library to handle data streams using Nats"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
clap = "4.5.4"
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = "0.3.30"
serde_json = "1.0.117"
tokio = "1.37.0"
tracing = "0.1.40"
