[package]
name = "fuel-core-nats"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Fuel library to handle data streams using Nats"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
bytes = "1.6.0"
clap = "4.5.4"
dotenvy = { workspace = true }
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = "0.3.30"
serde_json = "1.0.117"
tokio = { workspace = true }
tracing = "0.1.40"

[dev-dependencies]
rand = { workspace = true }
