[package]
name = "fuel-core-nats"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
description = "Fuel library to handle data streams using Nats"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = "1.6.0"
clap = { workspace = true }
dotenvy = { workspace = true }
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = "0.3.30"
rand = { workspace = true }
serde_json = "1.0.117"
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
