[package]
name = "fuel-data-parser"
description = "A parser for Fuel blockchain data structures and formats"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
async-compression = { version = "0.4.11", features = ["all"] }
async-trait = { workspace = true }
bincode = "1.3.3"
displaydoc = { workspace = true }
lazy_static = "1.5"
paste = "1.0.15"
postcard = "1.0.8"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = []
test-helpers = []
bench-helpers = []
