[package]
name = "fuel-data-parser"
description = "A parser for Fuel blockchain data structures and formats"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-compression = { version = "0.4", features = [], optional = true }
async-trait = { workspace = true }
bincode = { version = "1.3", optional = true }
displaydoc = { workspace = true }
lazy_static = "1.5"
paste = "1.0"
postcard = { version = "1.0", features = ["alloc"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["postcard", "zlib"]
all = ["bincode", "postcard", "json", "zlib", "gzip", "brotli", "bzip2", "lzma", "deflate", "zstd"]

# Serialization formats
bincode = ["dep:bincode"]
postcard = ["dep:postcard"]
json = ["dep:serde_json"]

# Compression strategies
zlib = ["dep:async-compression", "async-compression/zlib"]
gzip = ["dep:async-compression", "async-compression/gzip"]
brotli = ["dep:async-compression", "async-compression/brotli"]
bzip2 = ["dep:async-compression", "async-compression/bzip2"]
lzma = ["dep:async-compression", "async-compression/lzma"]
deflate = ["dep:async-compression", "async-compression/deflate"]
zstd = ["dep:async-compression", "async-compression/zstd"]

# Helper features
test-helpers = []
bench-helpers = ["all"]
