[package]
name = "fuel-data-parser"
description = "A parser for Fuel blockchain data structures and formats"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-compression = { version = "0.4", features = ["tokio"], optional = true }
async-trait.workspace = true
bincode = { version = "1.3", optional = true }
lazy_static = "1.5"
paste = "1.0"
postcard = { version = "1.0", features = ["alloc"], optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
all = [
  "bincode",
  "brotli",
  "bzip2",
  "deflate",
  "gzip",
  "json",
  "lzma",
  "postcard",
  "zlib",
  "zstd",
]
default = ["json", "zstd"]

# Serialization formats
bincode = ["dep:bincode"]
json = ["dep:serde_json"]
postcard = ["dep:postcard"]

# Compression strategies
brotli = ["async-compression/brotli", "dep:async-compression"]
bzip2 = ["async-compression/bzip2", "dep:async-compression"]
deflate = ["async-compression/deflate", "dep:async-compression"]
gzip = ["async-compression/gzip", "dep:async-compression"]
lzma = ["async-compression/lzma", "dep:async-compression"]
zlib = ["async-compression/zlib", "dep:async-compression"]
zstd = ["async-compression/zstd", "dep:async-compression"]

# Helper features
bench-helpers = ["all"]
test-helpers = []
