[package]
name = "fuel-db-utils"
description = "Fuel binaries for db utils"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[[bin]]
name = "api_key_generator"
path = "src/bin/api_key_generator.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
fake = { version = "3.1.0", features = ["derive"] }
fuel-data-parser = { workspace = true }
fuel-streams-store = { workspace = true }
fuel-web-utils = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "any",
    "tls-native-tls",
    "macros",
] }
thiserror = "2.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# in an individual package Cargo.toml
[package.metadata.cargo-machete]
ignored = ["fuel-data-parser"]

[features]
default = []
test-helpers = []
