[package]
name = "fuel-indexer"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
surrealdb = "2.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
