[package]
name = "fuel-streams-domains"
description = "Domains definitions for fuel streams"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
fuel-core.workspace = true
fuel-core-types.workspace = true
fuel-streams-macros.workspace = true
fuel-streams-store.workspace = true
fuel-streams-types.workspace = true
fuel-tx.workspace = true
fuel-vm.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true

# these dependencies need to update in the future when fuel-core 0.41.4 is on mainnet
[target.'cfg(target_os = "linux")'.dependencies]
netlink-proto = { version = "=0.11.3", optional = true }

[dev-dependencies]
test-case.workspace = true

[features]
default = []
test-helpers = [
  "fuel-core-types/test-helpers",
  "fuel-core/test-helpers",
  "fuel-streams-store/test-helpers",
  "fuel-streams-types/test-helpers",
]
