[package]
name = "fuel-streams-executors"
description = "Executors for Fuel Streams entities"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
fuel-core = { workspace = true }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
fuel-streams-store = { workspace = true }
fuel-streams-types = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
test-helpers = []
