[package]
name = "fuel-streams-macros"
description = "Macros for implementing traits and deriving functionality in the fuel-streams crate"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
subject-derive = { workspace = true }
