[package]
name = "fuel-streams-nats"
description = "Strategies and adapters for storing fuel streams in NATS"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-nats = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }

[features]
default = []
test-helpers = []
