[package]
name = "fuel-streams-protobuf"
description = "Protobuf definitions for Fuel Streams"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fuel-core-types = { workspace = true }
prost = "0.13.3"
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
prost-build = "0.13.3"
tonic-build = "0.12.3"

[features]
default = []
