[package]
name = "fuel-streams-publisher"
description = "Fuel library for publishing data streams from events that happen in Fuel chain(s)"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
actix-cors = "0.7.0"
actix-server = "2.5.0"
actix-web = "4.9.0"
actix-web-prom = { version = "0.8.0", features = ["process"] }
anyhow = { workspace = true }
chrono = { version = "0.4.19" }
clap = { workspace = true }
displaydoc = { workspace = true }
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-importer = { workspace = true, features = ["test-helpers"] }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-streams = { workspace = true, features = ["test-helpers"] }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
fuel-streams-macros = { workspace = true }
futures-util = "0.3.30"
metered = "0.9.0"
num_cpus = "1.16.0"
prometheus = { version = "0.13.4", features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = "0.7"

[dev-dependencies]

[features]
default = []
test-helpers = []
