[package]
name = "fuel-streams-publisher"
description = "Fuel library for publishing data streams from events that happen in Fuel chain(s)"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
actix-cors = { workspace = true }
actix-server = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { version = "1.0", features = ["full"] }
fuel-core = { workspace = true, features = ["test-helpers"] }
fuel-core-bin = { workspace = true }
fuel-core-importer = { workspace = true, features = ["test-helpers"] }
fuel-core-services = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-streams = { workspace = true, features = ["test-helpers"] }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
futures-util = { workspace = true }
num_cpus = "1.16"
parking_lot = { version = "0.12", features = ["serde"] }
prometheus = { version = "0.13", features = ["process"] }
rand = { workspace = true }
rust_decimal = { version = "1.13" }
serde = { workspace = true }
serde_prometheus = { version = "0.2" }
sha2 = { workspace = true }
sysinfo = { version = "0.32" }
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }

[dev-dependencies]

[features]
default = []
test-helpers = []
