[package]
name = "fuel-streams-storage"
description = "Srategies and adapters for storing fuel streams in transient and file storage systems (i.e. NATS and S3)"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-trait = "0.1.83"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"
displaydoc = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tracing-test = "0.2.0"

[features]
default = []
test-helpers = []
bench-helpers = []
