[package]
name = "fuel-streams-store"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
fuel-data-parser = { workspace = true }
fuel-streams-macros = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "any",
    "tls-native-tls",
    "macros",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }

[dev-dependencies]
test-case = { workspace = true }

[features]
default = []
test-helpers = ["fuel-data-parser/test-helpers"]
