[package]
name = "fuel-streams-types"
description = "Types for fuel streams"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
fuel-core = { workspace = true, default-features = false, features = [
    "p2p",
    "relayer",
    "rocksdb",
    "test-helpers",
] }
fuel-core-client = { workspace = true, default-features = false, features = [
    "std",
] }
fuel-core-importer = { workspace = true }
fuel-core-types = { workspace = true, default-features = false, features = [
    "std",
    "serde",
] }
fuel-streams-store = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

[features]
default = []
test-helpers = []
